-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs21, 7
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2212436 | 8 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
| JDK-2210336 | 7 | Vladimir Kozlov | P3 | Closed | Fixed | b143 |
| JDK-2212438 | hs22 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
java/util/EnumSet/EnumSetBash.java
still failing with same reasons as in 7001576
Since it was test bug I filed only P4
java.lang.RuntimeException: Set not equal to copy. 1
at EnumSetBash.fail(EnumSetBash.java:190)
at EnumSetBash.clone(EnumSetBash.java:145)
at EnumSetBash.bash(EnumSetBash.java:64)
at EnumSetBash.main(EnumSetBash.java:44)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:601)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:722)
JavaTest Message: Test threw exception: java.lang.RuntimeException: Set not equal to copy. 1
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: Set not equal to copy. 1
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Set not equal to copy. 1
test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Set not equal to copy. 1
still failing with same reasons as in 7001576
Since it was test bug I filed only P4
java.lang.RuntimeException: Set not equal to copy. 1
at EnumSetBash.fail(EnumSetBash.java:190)
at EnumSetBash.clone(EnumSetBash.java:145)
at EnumSetBash.bash(EnumSetBash.java:64)
at EnumSetBash.main(EnumSetBash.java:44)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:601)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:722)
JavaTest Message: Test threw exception: java.lang.RuntimeException: Set not equal to copy. 1
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: Set not equal to copy. 1
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Set not equal to copy. 1
test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Set not equal to copy. 1
- backported by
-
JDK-2212436 java/util/EnumSet/EnumSetBash.java still failing intermittently
-
- Resolved
-
-
JDK-2212438 java/util/EnumSet/EnumSetBash.java still failing intermittently
-
- Resolved
-
-
JDK-2210336 java/util/EnumSet/EnumSetBash.java still failing intermittently
-
- Closed
-
- relates to
-
JDK-5091921 Sign flip issues in loop optimizer
-
- Closed
-
-
JDK-7001576 test/java/util/EnumSet/EnumSetBash.java failing
-
- Closed
-
-
JDK-7001685 Test failure: java/util/EnumSet/EnumSetBash.java - Set doesn't contain one of its elements
-
- Closed
-
(1 relates to)