7045693: java/util/EnumSet/EnumSetBash.java still failing intermittently

New limit for unrolled loop should be set only for zero trip guard and loop iteration test.

Reviewed-by: never